--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
             android:textSize="10dp" />
     </takenoko.tech.blackboardapp.view.OpenMenuView>
     <include layout="@layout/layout_status" />
+    <include layout="@layout/layout_dialog"/>
     <!--android:background="#99ff5e00"-->
 
 </RelativeLayout>
