--- a/app/src/main/res/layout/layout_status.xml
+++ b/app/src/main/res/layout/layout_status.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="120dp"
-    android:layout_height="120dp"
+    android:layout_width="96dp"
+    android:layout_height="96dp"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
+    android:layout_margin="4dp"
     android:background="@drawable/custom_status">
     <ImageView
         android:id="@+id/status_image"
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:layout_margin="24dp"/>
+        android:layout_margin="18dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +19,7 @@
         <TextView
             android:id="@+id/status_text"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="48dp"
             android:gravity="bottom"
             android:shadowColor="#000000"
             android:shadowDx="0"
@@ -26,7 +27,7 @@
             android:shadowRadius="5"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="24dp" />
+            android:textSize="20dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
@@ -38,7 +39,7 @@
             android:text="モード"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="18dp" />
+            android:textSize="16dp" />
         <takenoko.tech.blackboardapp.util.PenCanvas
             android:id="@+id/status_view"
             android:layout_width="match_parent"
