--- a/app/src/main/res/layout/layout_status.xml
+++ b/app/src/main/res/layout/layout_status.xml
@@ -42,7 +42,7 @@
                 android:shadowDx="0"
                 android:shadowDy="0"
                 android:shadowRadius="5"
-                android:text="モード"
+                android:text="@string/status_mode"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="16dp" />
