--- a/app/src/main/res/layout/layout_import.xml
+++ b/app/src/main/res/layout/layout_import.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialog_layout"
+    android:id="@+id/import_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="invisible"
@@ -19,25 +19,12 @@
             android:orientation="vertical"
             android:padding="24dp">
             <TextView
-                android:id="@+id/dialog_title"
+                android:id="@+id/import_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Title"
                 android:textSize="20sp"
                 android:textColor="@color/colorText"/>
-            <ImageView
-                android:id="@+id/dialog_image"
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/custom_pattern" />
-            <TextView
-                android:id="@+id/dialog_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/colorSubText"
-                android:text=""/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +34,7 @@
             android:paddingRight="8dp"
             android:background="#FFF">
             <TextView
-                android:id="@+id/dialog_disagree"
+                android:id="@+id/import_disagree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
@@ -57,7 +44,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/accent_material_light" />
             <TextView
-                android:id="@+id/dialog_agree"
+                android:id="@+id/import_agree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
