--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     android:visibility="invisible"
     android:background="#be000000">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#FCFCFC"
         android:orientation="vertical"
         android:elevation="5dp"
@@ -45,7 +45,8 @@
             android:gravity="right"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:background="#FFF">
+            android:background="#FFF"
+            android:layout_alignParentBottom="true">
             <TextView
                 android:id="@+id/dialog_disagree"
                 android:layout_width="wrap_content"
@@ -67,5 +68,5 @@
                 android:textSize="18sp"
                 android:textColor="@color/accent_material_light" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
