--- a/app/src/main/res/layout/layout_import.xml
+++ b/app/src/main/res/layout/layout_import.xml
@@ -6,17 +6,18 @@
     android:layout_height="match_parent"
     android:visibility="invisible"
     android:background="#be000000">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="420dp"
+        android:layout_height="match_parent"
         android:background="#FCFCFC"
         android:orientation="vertical"
         android:elevation="5dp"
         android:layout_centerInParent="true">
         <LinearLayout
-            android:layout_width="420dp"
-            android:layout_height="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="16dp"
             android:padding="24dp">
             <TextView
                 android:id="@+id/import_title"
@@ -25,10 +26,19 @@
                 android:text="Title"
                 android:textSize="20sp"
                 android:textColor="@color/colorText"/>
+            <TextView
+                android:id="@+id/import_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text=""
+                android:textColor="@color/colorSubText"/>
             <takenoko.tech.blackboardapp.view.IOGridView
+                android:id="@+id/import_grid"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:numColumns="2"
+                android:layout_marginTop="8dp"
                 android:verticalSpacing="4dp"
                 android:horizontalSpacing="4dp"/>
         </LinearLayout>
@@ -38,7 +48,8 @@
             android:gravity="right"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:background="#FFF">
+            android:background="#FFF"
+            android:layout_alignParentBottom="true">
             <TextView
                 android:id="@+id/import_disagree"
                 android:layout_width="wrap_content"
@@ -60,5 +71,5 @@
                 android:textSize="18sp"
                 android:textColor="@color/accent_material_light" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
