--- a/app/src/main/res/layout/layout_admob.xml
+++ b/app/src/main/res/layout/layout_admob.xml
@@ -13,7 +13,7 @@
         android:background="#50000000">
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             ads:adSize="FULL_BANNER"
